portaudio/_portaudio.py


paInvalidHostApi = (paHostApiNotFound + 1) # /usr/include/portaudio.h: 104

paCanNotReadFromACallbackStream = (paInvalidHostApi + 1) # /usr/include/portaudio.h: 104

paCanNotWriteToACallbackStream = (paCanNotReadFromACallbackStream + 1) # /usr/include/portaudio.h: 104

paCanNotReadFromAnOutputOnlyStream = (paCanNotWriteToACallbackStream + 1) # /usr/include/portaudio.h: 104

paCanNotWriteToAnInputOnlyStream = (paCanNotReadFromAnOutputOnlyStream + 1) # /usr/include/portaudio.h: 104

paIncompatibleStreamHostApi = (paCanNotWriteToAnInputOnlyStream + 1) # /usr/include/portaudio.h: 104

paBadBufferPtr = (paIncompatibleStreamHostApi + 1) # /usr/include/portaudio.h: 104

PaErrorCode = enum_PaErrorCode # /usr/include/portaudio.h: 104

# /usr/include/portaudio.h: 110
if hasattr(_libs['portaudio'], 'Pa_GetErrorText'):
    Pa_GetErrorText = _libs['portaudio'].Pa_GetErrorText
    Pa_GetErrorText.argtypes = [PaError]
    if sizeof(c_int) == sizeof(c_void_p):
        Pa_GetErrorText.restype = ReturnString
    else:
        Pa_GetErrorText.restype = String
        Pa_GetErrorText.errcheck = ReturnString

# /usr/include/portaudio.h: 132
if hasattr(_libs['portaudio'], 'Pa_Initialize'):
    Pa_Initialize = _libs['portaudio'].Pa_Initialize
    Pa_Initialize.argtypes = []
    Pa_Initialize.restype = PaError

# /usr/include/portaudio.h: 151
if hasattr(_libs['portaudio'], 'Pa_Terminate'):
    Pa_Terminate = _libs['portaudio'].Pa_Terminate
    Pa_Terminate.argtypes = []
    Pa_Terminate.restype = PaError

PaDeviceIndex = c_int # /usr/include/portaudio.h: 161

PaHostApiIndex = c_int # /usr/include/portaudio.h: 187

# /usr/include/portaudio.h: 199
if hasattr(_libs['portaudio'], 'Pa_GetHostApiCount'):
    Pa_GetHostApiCount = _libs['portaudio'].Pa_GetHostApiCount
    Pa_GetHostApiCount.argtypes = []
    Pa_GetHostApiCount.restype = PaHostApiIndex

# /usr/include/portaudio.h: 210
if hasattr(_libs['portaudio'], 'Pa_GetDefaultHostApi'):
    Pa_GetDefaultHostApi = _libs['portaudio'].Pa_GetDefaultHostApi
    Pa_GetDefaultHostApi.argtypes = []
    Pa_GetDefaultHostApi.restype = PaHostApiIndex

enum_PaHostApiTypeId = c_int # /usr/include/portaudio.h: 240

paInDevelopment = 0 # /usr/include/portaudio.h: 240

paDirectSound = 1 # /usr/include/portaudio.h: 240

paMME = 2 # /usr/include/portaudio.h: 240

paASIO = 3 # /usr/include/portaudio.h: 240

paSoundManager = 4 # /usr/include/portaudio.h: 240

paCoreAudio = 5 # /usr/include/portaudio.h: 240

paOSS = 7 # /usr/include/portaudio.h: 240

paALSA = 8 # /usr/include/portaudio.h: 240

paAL = 9 # /usr/include/portaudio.h: 240

paBeOS = 10 # /usr/include/portaudio.h: 240

paWDMKS = 11 # /usr/include/portaudio.h: 240

paJACK = 12 # /usr/include/portaudio.h: 240

paWASAPI = 13 # /usr/include/portaudio.h: 240

paAudioScienceHPI = 14 # /usr/include/portaudio.h: 240

PaHostApiTypeId = enum_PaHostApiTypeId # /usr/include/portaudio.h: 240

# /usr/include/portaudio.h: 273
class struct_PaHostApiInfo(Structure):
    pass

struct_PaHostApiInfo.__slots__ = [
    'structVersion',
    'type',
    'name',
    'deviceCount',
    'defaultInputDevice',
    'defaultOutputDevice',
]
struct_PaHostApiInfo._fields_ = [
    ('structVersion', c_int),
    ('type', PaHostApiTypeId),
    ('name', String),
    ('deviceCount', c_int),
    ('defaultInputDevice', PaDeviceIndex),
    ('defaultOutputDevice', PaDeviceIndex),
]

PaHostApiInfo = struct_PaHostApiInfo # /usr/include/portaudio.h: 273

# /usr/include/portaudio.h: 289
if hasattr(_libs['portaudio'], 'Pa_GetHostApiInfo'):
    Pa_GetHostApiInfo = _libs['portaudio'].Pa_GetHostApiInfo
    Pa_GetHostApiInfo.argtypes = [PaHostApiIndex]
    Pa_GetHostApiInfo.restype = POINTER(PaHostApiInfo)

# /usr/include/portaudio.h: 307
if hasattr(_libs['portaudio'], 'Pa_HostApiTypeIdToHostApiIndex'):
    Pa_HostApiTypeIdToHostApiIndex = _libs['portaudio'].Pa_HostApiTypeIdToHostApiIndex
    Pa_HostApiTypeIdToHostApiIndex.argtypes = [PaHostApiTypeId]
    Pa_HostApiTypeIdToHostApiIndex.restype = PaHostApiIndex

# /usr/include/portaudio.h: 331
if hasattr(_libs['portaudio'], 'Pa_HostApiDeviceIndexToDeviceIndex'):
    Pa_HostApiDeviceIndexToDeviceIndex = _libs['portaudio'].Pa_HostApiDeviceIndexToDeviceIndex
    Pa_HostApiDeviceIndexToDeviceIndex.argtypes = [PaHostApiIndex, c_int]
    Pa_HostApiDeviceIndexToDeviceIndex.restype = PaDeviceIndex

# /usr/include/portaudio.h: 342
class struct_PaHostErrorInfo(Structure):
    pass

struct_PaHostErrorInfo.__slots__ = [
    'hostApiType',
    'errorCode',
    'errorText',
]
struct_PaHostErrorInfo._fields_ = [
    ('hostApiType', PaHostApiTypeId),
    ('errorCode', c_long),
    ('errorText', String),
]

PaHostErrorInfo = struct_PaHostErrorInfo # /usr/include/portaudio.h: 342

# /usr/include/portaudio.h: 358
if hasattr(_libs['portaudio'], 'Pa_GetLastHostErrorInfo'):
    Pa_GetLastHostErrorInfo = _libs['portaudio'].Pa_GetLastHostErrorInfo
    Pa_GetLastHostErrorInfo.argtypes = []
    Pa_GetLastHostErrorInfo.restype = POINTER(PaHostErrorInfo)

# /usr/include/portaudio.h: 371
if hasattr(_libs['portaudio'], 'Pa_GetDeviceCount'):
    Pa_GetDeviceCount = _libs['portaudio'].Pa_GetDeviceCount
    Pa_GetDeviceCount.argtypes = []
    Pa_GetDeviceCount.restype = PaDeviceIndex

# /usr/include/portaudio.h: 380
if hasattr(_libs['portaudio'], 'Pa_GetDefaultInputDevice'):
    Pa_GetDefaultInputDevice = _libs['portaudio'].Pa_GetDefaultInputDevice
    Pa_GetDefaultInputDevice.argtypes = []
    Pa_GetDefaultInputDevice.restype = PaDeviceIndex

# /usr/include/portaudio.h: 398
if hasattr(_libs['portaudio'], 'Pa_GetDefaultOutputDevice'):
    Pa_GetDefaultOutputDevice = _libs['portaudio'].Pa_GetDefaultOutputDevice
    Pa_GetDefaultOutputDevice.argtypes = []
    Pa_GetDefaultOutputDevice.restype = PaDeviceIndex

PaTime = c_double # /usr/include/portaudio.h: 409

PaSampleFormat = c_ulong # /usr/include/portaudio.h: 433

# /usr/include/portaudio.h: 466
class struct_PaDeviceInfo(Structure):
    pass

struct_PaDeviceInfo.__slots__ = [
    'structVersion',
    'name',
    'hostApi',
    'maxInputChannels',
    'maxOutputChannels',
    'defaultLowInputLatency',
    'defaultLowOutputLatency',
    'defaultHighInputLatency',
    'defaultHighOutputLatency',
    'defaultSampleRate',
]
struct_PaDeviceInfo._fields_ = [
    ('structVersion', c_int),
    ('name', String),
    ('hostApi', PaHostApiIndex),
    ('maxInputChannels', c_int),
    ('maxOutputChannels', c_int),
    ('defaultLowInputLatency', PaTime),
    ('defaultLowOutputLatency', PaTime),
    ('defaultHighInputLatency', PaTime),
    ('defaultHighOutputLatency', PaTime),
    ('defaultSampleRate', c_double),
]

PaDeviceInfo = struct_PaDeviceInfo # /usr/include/portaudio.h: 466

# /usr/include/portaudio.h: 482
if hasattr(_libs['portaudio'], 'Pa_GetDeviceInfo'):
    Pa_GetDeviceInfo = _libs['portaudio'].Pa_GetDeviceInfo
    Pa_GetDeviceInfo.argtypes = [PaDeviceIndex]
    Pa_GetDeviceInfo.restype = POINTER(PaDeviceInfo)

# /usr/include/portaudio.h: 530
class struct_PaStreamParameters(Structure):
    pass

struct_PaStreamParameters.__slots__ = [
    'device',
    'channelCount',
    'sampleFormat',
    'suggestedLatency',
    'hostApiSpecificStreamInfo',
]
struct_PaStreamParameters._fields_ = [
    ('device', PaDeviceIndex),
    ('channelCount', c_int),
    ('sampleFormat', PaSampleFormat),
    ('suggestedLatency', PaTime),
    ('hostApiSpecificStreamInfo', POINTER(None)),
]

PaStreamParameters = struct_PaStreamParameters # /usr/include/portaudio.h: 530

# /usr/include/portaudio.h: 558
if hasattr(_libs['portaudio'], 'Pa_IsFormatSupported'):
    Pa_IsFormatSupported = _libs['portaudio'].Pa_IsFormatSupported
    Pa_IsFormatSupported.argtypes = [POINTER(PaStreamParameters), POINTER(PaStreamParameters), c_double]
    Pa_IsFormatSupported.restype = PaError

PaStream = None # /usr/include/portaudio.h: 584

PaStreamFlags = c_ulong # /usr/include/portaudio.h: 602

# /usr/include/portaudio.h: 648
class struct_PaStreamCallbackTimeInfo(Structure):
    pass

struct_PaStreamCallbackTimeInfo.__slots__ = [
    'inputBufferAdcTime',
    'currentTime',
    'outputBufferDacTime',
]
struct_PaStreamCallbackTimeInfo._fields_ = [
    ('inputBufferAdcTime', PaTime),
    ('currentTime', PaTime),
    ('outputBufferDacTime', PaTime),
]

PaStreamCallbackTimeInfo = struct_PaStreamCallbackTimeInfo # /usr/include/portaudio.h: 648

PaStreamCallbackFlags = c_ulong # /usr/include/portaudio.h: 657

enum_PaStreamCallbackResult = c_int # /usr/include/portaudio.h: 703

paContinue = 0 # /usr/include/portaudio.h: 703

paComplete = 1 # /usr/include/portaudio.h: 703

paAbort = 2 # /usr/include/portaudio.h: 703

PaStreamCallbackResult = enum_PaStreamCallbackResult # /usr/include/portaudio.h: 703

PaStreamCallback = CFUNCTYPE(c_int, c_void_p, c_void_p, c_ulong, POINTER(PaStreamCallbackTimeInfo), PaStreamCallbackFlags, c_void_p) # /usr/include/portaudio.h: 754

# /usr/include/portaudio.h: 816
if hasattr(_libs['portaudio'], 'Pa_OpenStream'):
    Pa_OpenStream = _libs['portaudio'].Pa_OpenStream
    Pa_OpenStream.argtypes = [POINTER(POINTER(PaStream)), POINTER(PaStreamParameters), POINTER(PaStreamParameters), c_double, c_ulong, PaStreamFlags, POINTER(PaStreamCallback), c_void_p]
    Pa_OpenStream.restype = PaError

# /usr/include/portaudio.h: 856
if hasattr(_libs['portaudio'], 'Pa_OpenDefaultStream'):
    Pa_OpenDefaultStream = _libs['portaudio'].Pa_OpenDefaultStream
    Pa_OpenDefaultStream.argtypes = [POINTER(POINTER(PaStream)), c_int, c_int, PaSampleFormat, c_double, c_ulong, POINTER(PaStreamCallback), POINTER(None)]
    Pa_OpenDefaultStream.restype = PaError

# /usr/include/portaudio.h: 869
if hasattr(_libs['portaudio'], 'Pa_CloseStream'):
    Pa_CloseStream = _libs['portaudio'].Pa_CloseStream
    Pa_CloseStream.argtypes = [POINTER(PaStream)]
    Pa_CloseStream.restype = PaError

PaStreamFinishedCallback = CFUNCTYPE(UNCHECKED(None), POINTER(None)) # /usr/include/portaudio.h: 886

# /usr/include/portaudio.h: 907
if hasattr(_libs['portaudio'], 'Pa_SetStreamFinishedCallback'):
    Pa_SetStreamFinishedCallback = _libs['portaudio'].Pa_SetStreamFinishedCallback
    Pa_SetStreamFinishedCallback.argtypes = [POINTER(PaStream), POINTER(PaStreamFinishedCallback)]
    Pa_SetStreamFinishedCallback.restype = PaError

# /usr/include/portaudio.h: 912
if hasattr(_libs['portaudio'], 'Pa_StartStream'):
    Pa_StartStream = _libs['portaudio'].Pa_StartStream
    Pa_StartStream.argtypes = [POINTER(PaStream)]
    Pa_StartStream.restype = PaError

# /usr/include/portaudio.h: 918
if hasattr(_libs['portaudio'], 'Pa_StopStream'):
    Pa_StopStream = _libs['portaudio'].Pa_StopStream
    Pa_StopStream.argtypes = [POINTER(PaStream)]
    Pa_StopStream.restype = PaError

# /usr/include/portaudio.h: 924
if hasattr(_libs['portaudio'], 'Pa_AbortStream'):
    Pa_AbortStream = _libs['portaudio'].Pa_AbortStream
    Pa_AbortStream.argtypes = [POINTER(PaStream)]
    Pa_AbortStream.restype = PaError

# /usr/include/portaudio.h: 939
if hasattr(_libs['portaudio'], 'Pa_IsStreamStopped'):
    Pa_IsStreamStopped = _libs['portaudio'].Pa_IsStreamStopped
    Pa_IsStreamStopped.argtypes = [POINTER(PaStream)]
    Pa_IsStreamStopped.restype = PaError

# /usr/include/portaudio.h: 955
if hasattr(_libs['portaudio'], 'Pa_IsStreamActive'):
    Pa_IsStreamActive = _libs['portaudio'].Pa_IsStreamActive
    Pa_IsStreamActive.argtypes = [POINTER(PaStream)]
    Pa_IsStreamActive.restype = PaError

# /usr/include/portaudio.h: 993
class struct_PaStreamInfo(Structure):
    pass

struct_PaStreamInfo.__slots__ = [
    'structVersion',
    'inputLatency',
    'outputLatency',
    'sampleRate',
]
struct_PaStreamInfo._fields_ = [
    ('structVersion', c_int),
    ('inputLatency', PaTime),
    ('outputLatency', PaTime),
    ('sampleRate', c_double),
]

PaStreamInfo = struct_PaStreamInfo # /usr/include/portaudio.h: 993
